syntax = "proto3";

option go_package = ".;pb";
option java_multiple_files = true;
option java_package = "com.aapanavyapar.aapanavyapar.services";

import "trending-message.proto";

service ViewProviderService {
  rpc GetTrendingCategories (GetTrendingCategoriesRequest) returns (GetTrendingCategoriesResponse);
  rpc GetTrendingDataByCategories (GetTrendingDataByCategoriesRequest) returns (stream GetTrendingDataByCategoriesResponse);

}
